feat: add swagger documentation geo api
